Fixed some spacing and size issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ h1
   background-color: #000000;
   height:100%;
   width:100%;
+  padding-top:20%;
   padding:0;
   margin:0;
 
@@ -29,27 +30,25 @@ h1
   background-color:yellow;
   /*background-image: image("laptop.png");*/
   display: inline-block;
-  height:80vh;
-  width:90vh;
+  height:60vh;
+  width:50%;
+  top:20vh;
   /*background-color: black;*/
-  top:10vh;
   text-align: center;
 }
 #name
 {
-  position: absolute;
-  top:20vh;
-  left:23vh;
-  font-size: 10vh;
+  position: relative;
+  top:max(12vh,5vw);
+  font-size: min(9vh,6.3vw);
   z-index:2;
 }
 #position
 {
-  position: absolute;
-  top:30vh;
-  left:20vh;
+  position: relative;
+  top:max(14vh,6vw);
+  font-size: min(5vh,2.3vw);
   z-index:2;
-  font-size: 4vh;
 }
 #laptop
 {
